# voxharness

./: .env.example  .gitignore  README.md
android/: gradle.properties  local.properties.example  settings.gradle.kts  setup.sh
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/voxharness/app/: VoxHarnessApp.kt
android/app/src/main/java/com/voxharness/app/audio/: AudioCapture.kt  AudioPlayer.kt
android/app/src/main/java/com/voxharness/app/llm/: AnthropicProvider.kt  LlmProvider.kt
android/app/src/main/java/com/voxharness/app/service/: ConversationEngine.kt  DeviceTools.kt  VoiceService.kt
android/app/src/main/java/com/voxharness/app/ui/: MainActivity.kt
android/app/src/main/java/com/voxharness/app/voice/: ContinuousRecognizer.kt  SpeechToText.kt  TextToSpeech.kt  VadDetector.kt
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
backend/: config.py  conversation.py  main.py  music.py  pyproject.toml  server.py  stt.py  system_tools.py  tools.py  tts.py  vad.py  wakeword.py
backend/llm/: anthropic.py  base.py  openai.py  router.py
electron/: main.js  package-lock.json  package.json  preload.js
electron/renderer/: app.js  index.html  site.webmanifest  styles.css  visuals.js
